[package]
name = "chainexport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tokio = "1.14.0"
chrono = "0.4.19"
multimap = "0.8.3"
itertools = "0.10.1"

[dependencies.tendermint-rpc]
version = "0.23.0"
features = ["http-client"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]